# Cubo_e_Esfera_3D

./: README.md
projeto3d/: CMakeLists.txt  Cores.h  Primitivas.h  cg.h  main.cpp
projeto3d/shaders/: triangle_frag.glsl  triangle_vert.glsl
